# cpp-project

./: CMakeLists.txt  LICENSE  README.md  opt_gcc.cfg  opt_msvc.cfg  opt_win.cfg  proj.bat  proj.sh  project.cfg  spmake.bat  spmake.sh
cmake/: LoadOptions.cmake  SetGlobalDefines.cmake  SetPlatformFlags.cmake
tests/: phony_test.cc
